# nautilus-trusted-compute

./: ARCHITECTURE.md  README.md
backend-services/: .dockerignore  .env  README.md  generate-dockerignore.sh  pyproject.toml
docs/: 2023-09-26T13_25_52.034Z Nautilus - Nautilus Trusted Compute - Project Board.csv  API Set up for Purchase & Redemption of Append DRT.docx  API for Code Execution Implementation Plan.docx  Connecting Data Service API Endpoints.docx  Implementation Plan for Execution Enclave.docx  Jira.csv  MVP Vault Data Processing .docx  NTC Blockchain Transactions.xlsx  NTC CosmosDB Document Schemas.docx  NTC Data Service API.docx  NTC Implementation Plan V1.docx  NTC Implementation Plan V2.docx  NTC Implementation Plan V3.docx  (+3 more)
rust-sgx-workspace/: .dockerignore  Cargo.toml  Dockerfile  README-SGX.md  docker-compose.yaml  rust-toolchain.toml
rust-sgx-workspace/crates/http-service-impl/: Cargo.toml
rust-sgx-workspace/crates/http-service-impl/src/: actors.rs  server.rs  traits.rs
rust-sgx-workspace/crates/http-service-impl/src/resources/: data_operation.rs  enclave_report.rs  mod.rs  vault_operation.rs
rust-sgx-workspace/crates/sgx-helpers/: Cargo.toml
rust-sgx-workspace/crates/sgx-vault-impl/: Cargo.toml
rust-sgx-workspace/crates/sgx-vault-impl/src/: lib.rs
rust-sgx-workspace/crates/sgx-vault-impl/src/ecalls/: mod.rs  vault_operation.rs
rust-sgx-workspace/crates/sgx-vault-impl/src/schema/: actions.rs  entities.rs  mod.rs  types.rs
rust-sgx-workspace/crates/sgx-vault-impl/src/vault_operations/: create_vault.rs  dispatch.rs  load_onfido_check.rs  mod.rs  open_vault.rs  save_onfido_check.rs  sign_transaction.rs  sign_transaction_algorand.rs  store.rs
rust-sgx-workspace/crates/sgx-wallet-impl/: Cargo.toml
rust-sgx-workspace/projects/ntc-tee-server/: Makefile
rust-sgx-workspace/projects/ntc-tee-server/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  Makefile  build.rs
rust-sgx-workspace/projects/ntc-tee-server/app/codegen/: Enclave_u.c  Enclave_u.h  Enclave_u.rs
rust-sgx-workspace/projects/ntc-tee-server/app/src/: main.rs
rust-sgx-workspace/projects/ntc-tee-server/enclave/: Cargo.toml  Enclave.edl  Makefile
rust-sgx-workspace/projects/ntc-tee-server/enclave/codegen/: Enclave_t.c  Enclave_t.h
rust-sgx-workspace/projects/ntc-tee-server/enclave/src/: lib.rs
rust-sgx-workspace/projects/sgx-vault/: Makefile
rust-sgx-workspace/projects/sgx-vault-test/: Makefile
rust-sgx-workspace/projects/sgx-vault-test/app/: Cargo.toml  Makefile
rust-sgx-workspace/projects/sgx-vault-test/app/codegen/: Enclave_u.c  Enclave_u.h  Enclave_u.rs
rust-sgx-workspace/projects/sgx-vault-test/app/src/: main.rs
rust-sgx-workspace/projects/sgx-vault-test/enclave/: Cargo.toml  Makefile
rust-sgx-workspace/projects/sgx-vault-test/enclave/codegen/: Enclave_t.c  Enclave_t.h
rust-sgx-workspace/projects/sgx-vault-test/enclave/src/: lib.rs
rust-sgx-workspace/projects/sgx-vault-test/enclave/src/helpers/: mod.rs  vault_store.rs
rust-sgx-workspace/projects/sgx-vault-test/enclave/src/ported/: proptest_crypto.rs  test_attestation.rs  test_crypto.rs  test_kv_store.rs  test_kv_store_fs.rs
rust-sgx-workspace/projects/sgx-vault-test/enclave/src/ported/kv_store/: tests.rs
rust-sgx-workspace/projects/sgx-vault-test/enclave/src/schema/: test_sealing.rs  test_types.rs
rust-sgx-workspace/projects/sgx-vault-test/enclave/src/vault_operations/: mod.rs  test_create_vault.rs  test_dispatch.rs  test_load_onfido_check.rs  test_open_vault.rs  test_save_onfido_check.rs  test_sign_transaction.rs  test_sign_transaction_msgpack.rs  test_sign_transaction_xrpl.rs  test_store.rs
rust-sgx-workspace/projects/sgx-vault/app/: Cargo.toml  Makefile
rust-sgx-workspace/projects/sgx-vault/app/codegen/: Enclave_u.c  Enclave_u.h  Enclave_u.rs
rust-sgx-workspace/projects/sgx-vault/app/src/: main.rs  safe_ecalls.rs  trait_impls.rs
rust-sgx-workspace/projects/sgx-vault/enclave/: Cargo.toml  Enclave.edl  Makefile
rust-sgx-workspace/projects/sgx-vault/enclave/codegen/: Enclave_t.c  Enclave_t.h
rust-sgx-workspace/projects/sgx-vault/enclave/src/: lib.rs
rust-sgx-workspace/projects/sgx-wallet-test/app/: Cargo.toml
rust-sgx-workspace/projects/sgx-wallet-test/enclave/: Cargo.toml  Makefile
rust-sgx-workspace/projects/sgx-wallet/app/: Cargo.toml  Makefile
rust-sgx-workspace/projects/sgx-wallet/app/codegen/: Enclave_u.rs
rust-sgx-workspace/projects/sgx-wallet/enclave/: Cargo.toml  Makefile
rust-workspace/crates/ntc-asset-manager/: Cargo.toml
rust-workspace/crates/ntc-asset-manager/src/: algorand.rs  drt.rs  lib.rs  secret.rs
rust-workspace/crates/ntc-asset-manager/tests/: algo_explorer.rs
rust-workspace/crates/ntc-data-packages/: Cargo.toml
rust-workspace/crates/ntc-data-packages/src/: identity.rs  lib.rs
rust-workspace/crates/ntc-data-packages/src/crypto/: mod.rs
rust-workspace/crates/ntc-data-packages/src/data_packages/: common.rs  json_schema.rs  sealing.rs
rust-workspace/crates/ntc-data-packages/tests/data_packages/: common.rs  json_schema.rs  main.rs
rust-workspace/crates/ntc-oracle-node/: Cargo.toml
rust-workspace/crates/ntc-oracle-node/config/: default.toml
rust-workspace/crates/ntc-oracle-node/src/: errors.rs  main.rs  settings.rs  signer.rs
rust-workspace/crates/ntc-oracle-node/src/handlers/: auth_data.rs  mod.rs
rust-workspace/crates/ntc-vault-cli/: Cargo.toml
rust-workspace/crates/ntc-vault-cli/src/: actions.rs  commands.rs  compat.rs  crypto.rs  fs_io.rs  identity_files.rs  lib.rs
rust-workspace/crates/ntc-vault-cli/tests/subcommands/: data.rs  identity.rs  main.rs  usage.rs
rust-workspace/crates/ntc-vault-cli/tests/subcommands/common/: cli_fixture.rs  mod.rs
rust-workspace/crates/ntc-vault-core/: Cargo.toml
rust-workspace/crates/ntc-vault-core/src/data_packages/: common.rs  mod.rs  sealing.rs
rust-workspace/projects/data-server/: Cargo.toml
rust-workspace/projects/data-server/src/: main.rs
rust-workspace/projects/data-server/src/data_handlers/: mod.rs
rust-workspace/projects/data-server/src/logs_handlers/: mod.rs
(+67 files in other folders)
