[workspace]
members = [
    'crates/*',
    'projects/*/app',
    'projects/*/enclave',
]
exclude = [
    'crates/sgx-vault-impl',
    'projects/sgx-vault/app',
    'projects/sgx-vault/enclave',
    'projects/sgx-vault-test/app',
    'projects/sgx-vault-test/enclave',
]

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
