[package]
name = "ntc-asset-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algonaut = { git = "https://github.com/manuelmauro/algonaut", rev = "30a251e438df9bb7af8b3aafc53bb9945a74c963" }
algonaut_client = { git = "https://github.com/manuelmauro/algonaut", rev = "30a251e438df9bb7af8b3aafc53bb9945a74c963" }
once_cell = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.14", features = ["base64"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[dev-dependencies]
dotenv = { version = "0.15" }
tokio = { version = "1.18", default-features = false, features = ["macros", "rt"] }
mockall = "0.11"
