[package]
name = "ntc-data-packages"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Support for working with Nautilus Trusted Compute data packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = { version = "0.16", default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
hpke = "0.8.0"
rusty-sodalite = { git = "https://github.com/PiDelport/rusty-sodalite", branch = "initial-version" }

[dev-dependencies]
anyhow = "1.0"
k9 = "0.11"
rand = "0.8.5"
