[package]
name = "ntc-vault-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
description = "Nautilus Trusted Compute Vault CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.12", features = ["base64"] }

# XXX: Waiting for release 0.5.0:
#      <https://github.com/rust-cli/confy/issues/41> (Please release more often #41)
#      <https://github.com/rust-cli/confy/pull/60> (fix: store_path should create missing directories, like load_path #60)
confy = { git = "https://github.com/rust-cli/confy", branch = "master" }

# Crypto libraries
rand = "0.8"
rusty-sodalite = { git = "https://github.com/PiDelport/rusty-sodalite", branch = "initial-version" }

# Local libraries
ntc-data-packages = { path = "../ntc-data-packages" }
