[package]
name = "data-server"
version = "0.1.0"
authors = ["Nautilus team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.0.0"                                  #Change version for compatibility
bson = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
actix-rt = "1.1.1"
actix-web = "2.0"
futures = "0.3.5"
chrono = "0.4.11"
