[package]
# name matches APP_U in Makefile
name = "ntc-tee-server-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
