[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "ntc-tee-server-enclave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = []

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = [
  "backtrace",
], rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
