[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "ntc-tee-server-enclave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"], rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
