[package]
# name matches APP_U in Makefile
name = "sgx-vault-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.0.0-beta.8"

env-var-helpers = { git = "https://github.com/PiDelport/rust-env-var-helpers", default-features = false }

# SGX SDK
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }

http-service-impl = { path = "../../../crates/http-service-impl" }
sgx-helpers = { path = "../../../crates/sgx-helpers" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
