[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "sgx-vault-enclave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
bench = false
test = false

[features]
default = []

[dependencies]
# SGX SDK
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"], rev = "f1776a7cec1caab2959813f87bb4924805b92011" }

sgx-vault-impl = { path = "../../../crates/sgx-vault-impl" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "f1776a7cec1caab2959813f87bb4924805b92011" }
